# gateway

./: .env.example  .gitignore  Cargo.toml  config.example.toml  default.nix
.claude/skills/create-page/: SKILL.md
.github/workflows/: ci.yml
.sqlx/: query-0125451a4a2ae993fb433c4a6f472324c7186776ec75e7385e8749198016ed65.json  query-0cc254288794e0731c07337c59c77e3a3faae9408a0e8e1c7b7664636d9dc4e2.json  query-0cd3f22cb5e886b006abcf2773ff3d6149b0c1f5713f4be41bd542e886e26c29.json  query-16109a718deebf99e11e50255d78c420c8c5ad90c11fc95c3842183b0259882a.json  query-1888543982bf4fa928c9694a920568959715e1c214e75c44b6d440104e923ebb.json  query-20bf9db81825e434ffbc5777da22560a9552e9ab99d3163833de8a5dbad79eb5.json  query-26137523398d4207e8330cc2f784efc37de255eab8c6d803396c19d9ecc40f20.json  query-2759bf17e69d26ba2c5469458e859e411c099157b3c5a490e556e2dfe79aa455.json  query-2a3d11edcf175adc60945c18676929ecbe2c9b95e5adc03835d81de0e3605ac4.json  query-2b11b1a549aa71568b7cc08b50ee063817df0ae85150990df829478d86ab8362.json  query-2c46c4e887000a890ef8dffe02a284c636df9742e1d18b5c6184eefc0beab4a9.json  query-2ccbbb5a4eb99947c3fd50a99d7c37e0624573a6cca42b4f26382fc2be9e6339.json  query-2e7891e38ac8a01e7cb381f857095a52382442a2dcebc9b2d4cba67e0b7ca2b9.json  query-2e822e647174f42b7c70bfa39be92325d9b0c564b14470688fd5356c1143beed.json  query-378fe3183e694423721fa40a65ed762215a2071f46961a3cb5fe06cfc11d6b90.json  query-38df778f12b652463713c80ee3d07b8f76f3c5f4c020ed8a5228b53f7edb1cef.json  query-3e27c13851e0b09c1804a3c2669a0dbf3dc5243bd199899cdf14d5c2dc2bb6d1.json  query-44742d0ad7e1fcb40f30690ff727ccd871f078eb3dc09b5cd482618ebedaac88.json  query-5480c9b58ccd8f0d5273267f1b6b33510962c0797e383c971ec0b2d1b3d1969e.json  query-5740bf557c20152620b2b92c5ed30ff0dc5ffb268c9cfd44a452a007e3216913.json  query-5ac0004292cc0dd57ebd86f3b42ddb499bec61aa73e6756a035e038ba56f9f82.json  query-6ea28b87b6d64c033df7abcfe1a50581716ba76a54e184f541d2545fee1b1969.json  query-6fc43984f84ac1c9d44a5f619a7db2e684ff57415cb0526ca2d09816431cbecb.json  query-7d88dbf88f7ac671bdfc7478b7182dec1fd440ba5f4f7e504a58cf394a5cc0ce.json  query-7eb6fe479964058490e0aa8513eaa18321d9beda6e2f03d40efd85a0b58503ee.json  query-82566465920a8f388da3e102180fef33f09f1e315b4fa619cceb80e1ff68b18c.json  query-8447e63956b4071f5b026de4b1c93edd0c3ab39833a2a60a9eda61149da310de.json  query-89f231eb65c5990cc17fd9aafcdd16679a245923ca76a412be7a0ae3040c720f.json  query-8bcfdd7733c2ddbe78d9d2bc88e32e725aee43715b67657ecdb90974d35344ef.json  query-8d34bb309b4e3abddd7e46332b57afdbcc29252e4da719c820cf232359918ff3.json  query-9636ae311d42e23cd7118f77f575151f00c962114b133719d926a2ed11a87ecc.json  query-9727ce5dbcf985e53621de4311ab936f9d54af4c83d67b325b6cf56b7ab9d718.json  query-9afaf27fa18e3ac25bec7e64f651cfb3d664222a2e5381bb9ff139430cb22aa0.json  query-9b5a60a8d20e8d9f5bd734c636d1a508256700703cb461b5883a7c187daf0e24.json  query-a0248b341b9c5141772c5befef48267d5a53277933928d4f8c44ee7fa7ffde86.json  query-a3f15fb44475081a6c999f516ae3310911648e53063e11b3bd9f42972d48b112.json  query-a9f33c3ac9c55719146be366a2c2ac3eb46e72b78e1b6d30a5b074068c54ad97.json  query-abc1c0757f729295a24f697c0cb289e0ea86344835a44ea039f73c48266de906.json  query-b9d46d9fb10601d4689b0f9242dc3bfe61bdc36c90dfff398a71e28fd207e6cc.json  query-bb7c89bee184f5f8bd8d79208cdd8ffb6867a084e20fad0264dbfd2698605295.json  (+15 more)
apikeys/: Cargo.toml
apikeys/src/: lib.rs
inference_profiles/: Cargo.toml
inference_profiles/src/: lib.rs
migrations/: 10_add_global_claude_haiku_4_5.sql  11_add_claude_opus_4_7.sql  1_users.sql  2_api_keys.sql  3_models.sql  4_models_seed.sql  4_usage.sql  5_inference_profiles.sql  5_models_seed.sql  6_add_claude_models.sql  6_add_claude_sonnet_4_6.sql  6_models_seed_openai.sql  7_add_model_is_disabled.sql  7_api_keys_disabled.sql  8_update_models.sql  9_inference_profiles_unique_constraint.sql
models/: Cargo.toml
models/src/: lib.rs
myerrors/: Cargo.toml
myerrors/src/: lib.rs
myhandlers/: Cargo.toml
myhandlers/src/: lib.rs
npins/: sources.json
server/: Cargo.toml
server/src/: config.rs  csrf.rs  database.rs  main.rs  validation.rs
server/src/handlers/: add_model.rs  browse_models.rs  chat_completions.rs  clear_usage_history.rs  delete_model.rs  disable_api_keys.rs  disable_model.rs  enable_model.rs  generate_api_key.rs  health.rs  index.rs  mod.rs  models.rs  provision_api_key.rs  update_usage_recording.rs  update_usage_tracking.rs  usage_callback.rs  v1_messages.rs  v1_messages_count_tokens.rs  v1_models.rs  view_usage_history.rs
server/src/templates/: common.rs
usage/: Cargo.toml
usage/src/: lib.rs
users/: Cargo.toml
users/src/: lib.rs
