[package]
name = "inference_profiles"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
aws-config = "1.8.14"
aws-sdk-bedrock = "1.131.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "time"] }
tracing = "0.1.44"
uuid = { version = "1", features = ["v4"] }
