[package]
name = "myerrors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-sdk-bedrockruntime = "1.126.0"
axum = "0.8.8"

[dev-dependencies]
aws-smithy-runtime-api = "1.11.5"
aws-smithy-types = "1.4.5"
http-body-util = "0.1.3"
tokio = { version = "1.49.0", features = ["macros"] }
