[package]
name = "myerrors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-sdk-bedrockruntime = "1.127.0"
axum = "0.8.8"
tracing = "0.1.44"

[dev-dependencies]
aws-smithy-runtime-api = "1.11.6"
aws-smithy-types = "1.4.7"
http-body-util = "0.1.3"
tokio = { version = "1.50.0", features = ["macros"] }
