[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
apikeys = { path = "../apikeys" }
axum = "0.8.3"
axum_csrf = { version = "0.11.0", features = ["layer"] }
chat = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
config = "0.15.11"
dotenv = "0.15.0"
http = "1.3.1"
models = { path = "../models" }
myerrors = { path = "../myerrors" }
myhandlers = { path = "../myhandlers" }
request = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
reqwest = "0.12.15"
response = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["postgres"] }
time = "0.3.41"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
usage = { path = "../usage" }
users = { path = "../users" }
