[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
anthropic-request = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
anthropic-response = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
apikeys = { path = "../apikeys" }
aws-sdk-bedrockruntime = "1.124.0"
axum = "0.8.8"
axum_csrf = { version = "0.11.0", features = ["layer"] }
chat = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
config = "0.15.19"
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.4.0"
inference_profiles = { path = "../inference_profiles" }
models = { path = "../models" }
myerrors = { path = "../myerrors" }
myhandlers = { path = "../myhandlers" }
request = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
reqwest = "0.13.2"
response = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres"] }
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { git = "https://github.com/llm-proxy-rs/tower-sessions-stores.git", version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
users = { path = "../users" }
