[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anthropic-request = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
anthropic-response = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
anyhow = "1.0.102"
apikeys = { path = "../apikeys" }
aws-config = "1.8.15"
aws-sdk-bedrockruntime = "1.128.0"
axum = "0.8.8"
axum_csrf = { version = "0.11.0", features = ["layer"] }
chat = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
chrono = "0.4.44"
common = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
config = "0.15.22"
dotenv = "0.15.0"
futures = "0.3.32"
http = "1.4.0"
inference_profiles = { path = "../inference_profiles" }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
jwks = { git = "https://github.com/llm-proxy-rs/cognito.git" }
models = { path = "../models" }
myerrors = { path = "../myerrors" }
myhandlers = { path = "../myhandlers" }
request = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
reqwest = "0.13.2"
validation = { git = "https://github.com/llm-proxy-rs/cognito.git" }
response = { git = "https://github.com/llm-proxy-rs/llm-proxy-rs.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "tls-rustls"] }
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { git = "https://github.com/llm-proxy-rs/tower-sessions-stores.git", version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
users = { path = "../users" }
