[package]
name = "usage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["time_0_3"] }
sqlx = { version = "0.8.6", features = ["bigdecimal", "postgres", "runtime-tokio", "time"] }
time = "0.3.47"
